jordan update 2/9/22